@@ -9,6 +9,7 @@ WinMerge 2.10 RC
   BugFix: Didn't select word-diff cyclically by pressing F4 key (#1989858)
   BugFix: Crash when generating a folder comparison report (#2008581)
   BugFix: Table of Contents in manual (#2071625)
+  BugFix: ClearCase checkout/commit dialog translation error (#2051069)
   Translation updates:
   - Brazilian (#2059836)
   - German (#2045666)
